# DRB_water_management

./: .gitignore  pyproject.toml
pywrdrb/: compare_hdf5_files.py  make_model.py  make_model_cl.py  model_builder.py  run_historic_simulation_cl.py  simple_run_cl.py  simple_run_salinity.py
pywrdrb/model_data/: drb_model_full_nhmv10.json  drb_model_full_nhmv10_cl.json  drb_model_full_nhmv10_test_temp.json  drb_model_full_nhmv10_withObsScaled_cl.json  drb_model_full_nhmv10_withObsScaled_no_temp_lstm.json  drb_model_full_nhmv10_withObsScaled_with_salinity_lstm_torchseed8.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed0.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed1.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed2.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed3.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed4.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed5.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed6.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed7.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed8.json  drb_model_full_nhmv10_withObsScaled_with_temp_lstm_torchseed9.json  drb_model_full_nhmv10_with_temp_lstm.json  drb_model_full_nwmv21.json  drb_model_full_nwmv21_cl.json  drb_model_full_nwmv21_no_temp_lstm.json  drb_model_full_nwmv21_withObsScaled.json  drb_model_full_nwmv21_withObsScaled_cl.json  drb_model_full_nwmv21_with_temp_lstm.json  (+3 more)
(+2 files in other folders)
